Added baseline Javascript (based on previous project work) and edited HTML to include temperature conversion template

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
             <h5 class="dayTime" id="current-time">Monday 16:31</h5>
             <h6 class="weatherDescription">Cloudy</h6>
             <br />
-            <h5 class="temperature">19<span class="tempUnits">˚C</span></h5>
+            <span class="tempOptions"
+              ><h5 class="temperature">19</h5>
+              <span class="units">
+                <a href="#" id="celsius-link">˚C</a> |
+                <a href="#" id="fahrenheit-link">˚F</a>
+              </span>
+            </span>
           </div>
           <div class="col-md-2">
             <h6>Precipitation 0%</h6>
